# detection-pipeline

./: .gitignore  README.md  arguments.py  config_loader.py  events.py  pipeline.py  pipeline_context.py  pyproject.toml  requirements.txt  restapi.py  run.py  source_factory.py  utils.py  visualization.py
detectors/: base.py  detector_factory.py  rfdetr_detector.py
project/: config.json
projects/example_project/: config.json
tests/: test_config_loader.py  test_detector_factory.py  test_pipeline.py  test_pipeline_context.py  test_restapi.py  test_run.py  test_source_factory.py  test_visualization.py
tracking/: base_tracker.py  byte_tracker.py  registry.py
