[project]
name = "detection-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.5",
    "rfdetr>=1.5.1",
    "yt-dlp>=2024.12.0",
    "pytest>=7.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
]
